--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ html, body {
 
 
 canvas {
-
     display: block;
 
     margin: auto;
@@ -32,48 +31,39 @@ canvas {
 
 
 
-.wrapper {
 
-    width: 512px;
 
-    margin: 0 auto;
+.info{
+    left: 0; bottom: 0; /* Левый нижний угол */
+    position: fixed;
+    width: 100%; /* Ширина слоя */
+}
 
-    margin-top: 2em;
+.links_class{
+    margin-right: 2em;
+    margin-left: 2em;
+    display: inline-block;
+    font-size: 1.3em;
+    color: gold;
+}
 
+.a_class_vk{
+    color: dodgerblue;
+}
+
+.a_class_vk:hover{
+    color: mediumvioletred;
+}
+
+.a_class_git {
+    color: forestgreen;
+}
+
+ .a_class_git:hover {
+        color: white;
 }
 
 
-
-#instructions {
-
-    float: left;
-
-    font-family: sans-serif;
-
-    color: #757575;
-    display: none;
-
-}
-
-
-
-#score {
-
-    float: right;
-
-    color: white;
-
-    font-size: 2em;
-
-}
-
-
-
-.key {
-
-    color: #aaffdd;
-
-}
 
 
 
